cm4all-myproxy (0.24) unstable; urgency=low

  * add connect option "read_only"

 --   

cm4all-myproxy (0.23) unstable; urgency=low

  * strip trailing null byte from password
  * switch to C++23
  * require Meson 1.2

 -- Max Kellermann <mk@cm4all.com>  Mon, 02 Jun 2025 08:18:45 +0200

cm4all-myproxy (0.22) unstable; urgency=low

  * pg: support integer parameters
  * use pidfd to avoid PID recycling races
  * fix assertion failure

 -- Max Kellermann <mk@cm4all.com>  Tue, 26 Nov 2024 12:50:31 +0100

cm4all-myproxy (0.21) unstable; urgency=low

  * check: send QUIT packet before disconnecting

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Aug 2024 10:19:07 +0200

cm4all-myproxy (0.20) unstable; urgency=low

  * increase listener backlog to 256
  * prometheus: wait for HTTP request to arrive
  * prometheus: export Lua error counter
  * prometheus: export per-server query statistics

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Aug 2024 17:49:49 +0200

cm4all-myproxy (0.19) unstable; urgency=low

  * pg: fix 0.18 regression

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Aug 2024 14:59:20 +0200

cm4all-myproxy (0.18) unstable; urgency=low

  * pg: fix assertion failure

 -- Max Kellermann <mk@cm4all.com>  Mon, 05 Aug 2024 19:15:29 +0200

cm4all-myproxy (0.17) unstable; urgency=low

  * fix startup crash if bind address is already in use
  * quote client-specified strings for logging
  * export Promtheus metrics

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 May 2024 17:29:01 +0200

cm4all-myproxy (0.16) unstable; urgency=low

  * use an optimized buffer allocator
  * lua/libsodium: add bindings for bin2hex, hex2bin, randombytes,
    crypto_scalarmult_base
  * lua: fix crash if handler keys not strings
  * debian: add missing build-dependency on libsodium-dev

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Mar 2024 17:51:30 +0100

cm4all-myproxy (0.15) unstable; urgency=low

  * implement auth plugin "client_ed25519"
  * close connection after auth failure
