@@ -60,6 +60,36 @@ means they must not do any network I/O, launch child processes, and
 should avoid anything but querying the parameters.
 
 
+Control Listener
+----------------
+
+The ``control_listen()`` function creates a listener for control
+datagrams that can be used to control certain behavior at runtime::
+
+ control_listen(address [, options])
+
+The ``address`` parameter specifies the socket address to bind to.
+May be the wildcard ``*`` or an IPv4/IPv6 address followed by a
+port. IPv6 addresses should be enclosed in square brackets to
+disambiguate the port separator. Local sockets start with a slash
+:file:`/`, and abstract sockets start with the symbol ``@``.
+
+The second parameter is an optional table that has more options:
+
+- ``multicast_group``: join this multicast group, which allows
+  receiving multicast commands. Value is a multicast IPv4/IPv6
+  address.  IPv6 addresses may contain a scope identifier after a
+  percent sign (``%``).
+
+- ``interface``: limit this listener to the given network interface.
+
+Example::
+
+ control_listen('@myproxy-control')
+ control_listen('*', {multicast_group='224.0.0.42', interface='eth1'})
+ control_listen('127.0.0.1:1234')
+
+
 Prometheus Exporter
 ^^^^^^^^^^^^^^^^^^^
 
